--- a/ops/nginx.conf
+++ b/ops/nginx.conf
@@ -41,9 +41,13 @@ http {
 
     # Rate limit (basic)
     limit_req_zone $binary_remote_addr zone=api_ratelimit:10m rate=10r/s;
+    # Connection limit
+    limit_conn_zone $binary_remote_addr zone=addr:10m;
 
     location / {
       limit_req zone=api_ratelimit burst=20 nodelay;
+      limit_conn addr 10;
+
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
